=== Version 0.6.5
* Enhancements
  * Added a page level element method to return a generic Element object
  * Updated all accessor methods to take a default identifier of {:index => 0}
  * Updated all page level element locators to take a default identifier of {:index => 0}

=== Version 0.6.4 / 2012-3-27
* Enhancements
  * Added support for finding the following elements by :css
	Button
	Link
  * Added support for the label element (Thanks Paul Clewell)
  * Added method to fetch generic element (Thanks Jim Holmes)
  * Added direct_url alias for page_url
  * Added visit alias for visit_page
  * Added on alias for on_page
  * Added element_with_focus method to return the element that has focus
  * Changed Elements.element_class_for so parameters can be strings or symbols
  * Changed page_url to accept a symbol that will cause it to call a corresponding method
  * Updated to use watir-webdriver 0.5.4

=== Version 0.6.3 / 2012-3-1
* Enhancements
  * Added #expected_title method to PageObject
  * Added #expected_element method to PageObject
  * Added #execute_script method to PageObject
  * Updated to use selenium-webdriver 2.20.0
* Fixes
  * Udates to the README - Thanks to p0deje and ivaravko
  WARNING:  This change breaks existing code
  * Changed the generated getter for select_list to return the text instead of the value

=== Version 0.6.2 / 2012-2-12
* Enhancements
  * Added #wait_for_ajax support for the jQuery framework
  * Added #wait_for_ajax support for the Prototype framework
  * Added the ability to add new Javascript Frameworks to PageObject via the #add_framework method
  * Updated to use selenium-webdriver 2.19.0
  * Updated to use watir-webdriver 0.5.3
* Fixes
  * Fixed [] methods on OrderedList and UnorderedList so it only gets direct children
  * Fixed items methods on OrderedList and UnorderedList so it returns count of direct children

=== Version 0.6.1 / 2012-1-18
* Enhancements
  * Added #disabled? method to Element