@@ -136,5 +136,9 @@
     <p class="p">Paragraph Two</p>
     <p class="p">Paragraph Three</p>
     
+    <input type="file" class="file_field_class" title="File Field 1" />
+    <input type="file" class="file_field_class" title="File Field 2" />
+    <input type="file" class="file_field_class" title="File Field 3" />
+
   </body>
 </html>
