@@ -866,6 +866,22 @@ module PageObject
     end
 
     #
+    # Finds all file fields that match the provided identifier
+    #
+    # @param [Hash] identifier how we find a file field.  You can use a multiple paramaters
+    #   by combining of any of the following except xpath.  It defaults to and empty Hash
+    #   which will return all file fields.  The valid keys are:
+    #   * :class => Watir and Selenium
+    #   * :id => Watir and Selenium
+    #   * :index => Watir and Selenium
+    #   * :name => Watir and Selenium
+    #   * :title => Watir and Selenium
+    #   * :xpath => Watir and Selenium
+    def file_field_elements(identifier={})
+      platform.file_fields_for(identifier.clone)
+    end
+
+    #
     # Finds an element
     #
     # @param [Symbol] the name of the tag for the element
