@@ -1,8 +1,10 @@
 === Version 0.6.5
 * Enhancements
   * Added a page level element method to return a generic Element object
+  * Added a method to retrieve all file fields on a page
   * Updated all accessor methods to take a default identifier of {:index => 0}
   * Updated all page level element locators to take a default identifier of {:index => 0}
+  * Updated all page level multi-element locators to take a default identifier of {}
 
 === Version 0.6.4 / 2012-3-27
 * Enhancements
